04/26/25: Tailwind was not working, so I had to try to reconfigure everything. Ultimately needed to uninstall @tailwindcss/vite, vite, and then install tailwind, @tailwindcss/cli, postcss, and autoprefixer and rework the configuration files to fit properly. I also installed concurrently to be able to run the server and update the css at the same time.

--- a/personal-webpage/views/partials/header.ejs
+++ b/personal-webpage/views/partials/header.ejs
@@ -1,9 +1,17 @@
-<nav>
-    <ul>
-      <li>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tyler Boerner</title>
+    <link rel="stylesheet" href="/css/styles.css">
+  </head>
+<body>
+<nav class="">
+    <ul class="flex space-x-4 bg-red-500">
+      <li class="hover:bg-gray-500">
         <a href="/">Home</a>
       </li>
-      <li>
+      <li class="hover:bg-blue-500">
         <a href="/projects">Projects</a>
       </li>
       <li>
