--- a/personal-webpage/views/partials/footer.ejs
+++ b/personal-webpage/views/partials/footer.ejs
@@ -1,2 +1,13 @@
+</main>
 </body>
+<footer class="bg-[#75ABBC] italic text-sm text-center mt-5 mb-0">
+    <p>Copyright &copy; 2025 Tyler Boerner</p>
+    <p>Arkansas Tech University</p>
+    <p>Department of Computer Science</p>
+    <p>
+        Contact:
+        <a href="mailto:tboerner@atu.edu">tboerner@atu.edu</a><br>
+        Last updated: May 2025
+    </p>
+</footer>
 </html>
