--- a/personal-webpage/views/partials/header.ejs
+++ b/personal-webpage/views/partials/header.ejs
@@ -1,27 +1,20 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tyler Boerner</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
-<body>
-<nav class="">
-    <ul class="flex space-x-4 bg-red-500">
-      <li class="hover:bg-gray-500">
-        <a href="/">Home</a>
-      </li>
-      <li class="hover:bg-blue-500">
-        <a href="/projects">Projects</a>
-      </li>
-      <li>
-        <a href="/education">Education</a>
-      </li>
-      <li>
-        <a href="/skills">Skills</a>
-      </li>
-      <li>
-        <a href="/contact">Contact</a>
-      </li>
-    </ul>
-  </nav>
+  <body class="bg-[#DFE0E2] text-[#071013] flex flex-col min-h-screen">
+    <nav class="fixed top-0 w-full z-50">
+      <ul class="flex justify-center space-x-4 bg-[#23B5D3] text-xl p-5 shadow-md">
+        <li><a class="hover:bg-[#75ABBC] px-4 py-2 rounded" href="/">Home</a></li>
+        <li><a class="hover:bg-[#75ABBC] px-4 py-2 rounded" href="/projects">Projects</a></li>
+        <li><a class="hover:bg-[#75ABBC] px-4 py-2 rounded" href="/education">Education</a></li>
+        <li><a class="hover:bg-[#75ABBC] px-4 py-2 rounded" href="/skills">Skills</a></li>
+        <li><a class="hover:bg-[#75ABBC] px-4 py-2 rounded" href="/contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <div class="pt-24"></div>
+    <main class="max-w-5xl mx-auto p-6 pt-0 flex-grow">
