--- a/personal-webpage/views/projects.ejs
+++ b/personal-webpage/views/projects.ejs
@@ -1,16 +1,15 @@
 <%- include('partials/header') %>
 
-<h1>My Projects</h1>
+<h1 class="text-center text-4xl font-bold p-3">My Projects</h1>
 
-<div class="projects-list">
+<div class="max-w-4xl mx-auto px-4">
   <% projects.forEach(project => { %>
-    <div class="project">
-      <h2><%= project.title %></h2>
-      <p><%= project.description %></p>
-      <% if (project.link) { %>
-        <a href="<%= project.link %>" target="_blank">View Project</a>
-      <% } %>
-      <p><strong>Technologies:</strong> <%= project.technologies.join(', ') %></p>
+    <div class="bg-white border-3 border-[#071013] rounded-2xl shadow-[0_0_15px_#071013] p-5 my-6 transition-transform hover:scale-[1.01] duration-200 ease-in-out">
+      <h2 class="font-bold text-2xl text-[#0B2545] mb-2"><%= project.title %></h2>
+      <p class="text-[#4B5D67] mb-2"><%= project.description %></p>
+      <p class="text-sm text-[#344966]"><strong>Technologies:</strong> <%= project.technologies.join(', ') %></p>
+      <a class="text-[#3B82F6] hover:underline block mt-2" href="<%= project.link %>" target="_blank">View Project</a>
+      <p class="text-xs text-[#6B7280] mt-2">Completed: <%= project.date.toDateString() %></p>
     </div>
   <% }) %>
 </div>
