--- a/personal-webpage/views/partials/footer.ejs
+++ b/personal-webpage/views/partials/footer.ejs
@@ -6,7 +6,7 @@
     <p>Department of Computer Science</p>
     <p>
         Contact:
-        <a href="mailto:tboerner@atu.edu">tboerner@atu.edu</a><br>
+        <a href="mailto:tjb0013@gmail.com">tjb0013@gmail.com</a><br>
         Last updated: May 2025
     </p>
 </footer>
